Releasing reusable-workflows

--- a/.github/workflows/accept-contribution-be.yml
+++ b/.github/workflows/accept-contribution-be.yml
@@ -9,7 +9,7 @@ on:
   workflow_call:
     inputs:
       pr_number:
-        type: number
+        type: string
         description: Number of accepted PR
         required: true
     secrets:
